# Snowcode

./: .gitignore  LLM_CONFIG.md  README.md  examples.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
codechat/: __init__.py  agent.py  agent_v2.py  ast_chunker.py  chunker.py  cli.py  config.py  rag.py  repo_map.py  scanner.py  skills.py  store.py  tree_gen.py
tests/: test_agent_v2.py  test_rag.py  test_scanner.py
